# faqs-policy-bot

./: .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml
apps/admin-dashboard/: package-lock.json  package.json
apps/admin-dashboard/prisma/: dev.db  schema.prisma
apps/admin-dashboard/src/: middleware.ts
apps/admin-dashboard/src/app/: globals.css
apps/admin-dashboard/src/app/api/chat/: route.ts
apps/admin-dashboard/src/app/api/chat-logs/: route.ts
apps/admin-dashboard/src/app/api/documents/: route.ts
apps/admin-dashboard/src/app/api/users/: route.ts
apps/admin-dashboard/src/app/dashboard/: layout.tsx  page.tsx
apps/admin-dashboard/src/app/dashboard/chats/: page.tsx
apps/admin-dashboard/src/app/dashboard/documents/: page.tsx
apps/admin-dashboard/src/app/dashboard/settings/: page.tsx
apps/admin-dashboard/src/app/login/: page.tsx
apps/admin-dashboard/src/app/register/: page.tsx
apps/admin-dashboard/src/lib/: auth.ts
apps/backend/: pyproject.toml
apps/backend/app/: chain.py  config.py  ingest.py  main.py  models.py  rag.py  routes.py  vectorstore.py
apps/backend/docs/: company_policies.md  faq.md
apps/website/: index.html  package-lock.json  package.json  vite.config.ts
apps/website/src/: App.css  App.tsx  main.tsx
apps/website/src/components/: ChatInput.tsx  ChatWidget.tsx  ChatWindow.tsx  CustomLogo.tsx  MessageBubble.tsx  TypingIndicator.tsx
apps/website/src/components/ui/: Button.tsx
apps/website/src/hooks/: useChat.ts  useQueryParams.ts
apps/website/src/types/: chat.ts
(+5 files in other folders)
